# rustysynth

./: Cargo.toml
rustysynth/: Cargo.toml
rustysynth-midi/: Cargo.toml
rustysynth-midi/src/: lib.rs  midifile.rs  midifile_sequencer.rs
rustysynth-soundfont/: Cargo.toml
rustysynth-soundfont/src/: error.rs  instrument_info.rs  instrument_region.rs  lib.rs  preset_region.rs  region_pair.rs  soundfont.rs  soundfont_info.rs
rustysynth/src/: array_math.rs  bi_quad_filter.rs  binary_reader.rs  channel.rs  chorus.rs  envelope_stage.rs  error.rs  generator.rs  generator_type.rs  instrument.rs  instrument_region.rs  lfo.rs  lib.rs  loop_mode.rs  midifile.rs  midifile_sequencer.rs  modulation_envelope.rs  oscillator.rs  preset.rs  preset_info.rs  preset_region.rs  region_ex.rs  region_pair.rs  reverb.rs  sample_header.rs  soundfont_math.rs  soundfont_parameters.rs  soundfont_sampledata.rs  soundfont_version.rs  synthesizer.rs  synthesizer_settings.rs  voice.rs  voice_collection.rs  volume_envelope.rs  zone.rs  zone_info.rs
workspace/: Cargo.toml
workspace/src/: main.rs
