[package]
name = "rustysynth"
version = "1.3.5"
authors = ["Nobuaki Tanaka"]
edition.workspace = true

description = "A SoundFont MIDI synthesizer written in pure Rust"
documentation = "https://docs.rs/rustysynth/latest/rustysynth/"
readme = "README.md"
repository = "https://github.com/sinshu/rustysynth"
license = "MIT"
keywords = ["soundfont", "midi", "synthesizer", "audio", "music"]
categories = ["multimedia::audio"]

[dependencies]
anyhow.workspace = true
midly = "0.5.3"